<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/background_svg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:src="@mipmap/background_svg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/splash_screen"
            app:layout_constraintBottom_toTopOf="@+id/slogan_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.821" />

        <TextView
            android:id="@+id/slogan_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="172dp"
            android:gravity="center_horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/slogan"
            android:textColor="@color/white_primary"
            android:textSize="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/background_svg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/slogan_text"
            android:layout_marginTop="30dp"
            android:padding="16dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin = "8dp"
                android:inputType="textEmailAddress"
                android:background="@drawable/edit_text"
                android:elevation="5dp"
                android:id="@+id/email_input_login"
                android:hint="@string/email"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textColorHint="@color/black_least" />

            <EditText
                android:id="@+id/password_input_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:layout_margin = "8dp"
                android:background="@drawable/edit_text"
                android:elevation="5dp"
                android:hint="@string/password"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textColorHint="@color/black_least" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/primary_button"
                android:text="@string/login"
                android:layout_margin = "8dp"
                android:textColor="@color/white_primary"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:elevation="5dp"
                />

            <ProgressBar
                android:id="@+id/progress_bar_login"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:indeterminateTint="@color/primary_color"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"/>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_have_an_account"
                    android:textColor="@color/black_secondary"
                    android:textSize="18sp"
                    />

                <Button
                    android:id="@+id/signup_link_button"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/signup"
                    android:background="@drawable/link_button"
                    android:textAllCaps="false"
                    android:textColor="@color/primary_color"
                    android:padding="0dp"
                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/instead"
                    android:textColor="@color/black_secondary"
                    android:textSize="18sp"
                    />
            </LinearLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>